--- a/refs.bib
+++ b/refs.bib
@@ -331,3 +331,50 @@ note = {(Accessed on 06/02/2022)}
    Pages="881--883",
    Month="04"
 }
+
+
+% 27501264 
+@Article{pmid27501264,
+   Author="Wohl, S.  and Schaffner, S. F.  and Sabeti, P. C. ",
+   Title="{{G}enomic {A}nalysis of {V}iral {O}utbreaks}",
+   Journal="Annu Rev Virol",
+   Year="2016",
+   Volume="3",
+   Number="1",
+   Pages="173--195",
+   Month="09"
+}
+
+@article{mcbroome2022identifying,
+  title={Identifying SARS-CoV-2 regional introductions and transmission clusters in real time},
+  author={McBroome, Jakob and Martin, Jennifer and de Bernardi Schneider, Adriano and Turakhia, Yatish and Corbett-Detig, Russell},
+  journal={medRxiv},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article {Mears2022,
+	author = {Mears, Harriet V and Young, George R and Sanderson, Theo and Harvey, Ruth and Crawford, Margaret and Snell, Daniel M and Fowler, Ashley S and Hussain, Saira and Nicod, J{\'e}r{\^o}me and Peacock, Thomas P and Emmott, Edward and Finsterbusch, Katja and Luptak, Jakub and Wall, Emma and Williams, Bryan and Gandhi, Sonia and Swanton, Charles and Bauer, David LV},
+	title = {Emergence of new subgenomic mRNAs in SARS-CoV-2},
+	elocation-id = {2022.04.20.488895},
+	year = {2022},
+	doi = {10.1101/2022.04.20.488895},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Two mutations occurred in SARS-CoV-2 early during the COVID-19 pandemic that have come to define circulating virus lineages1: first a change in the spike protein (D614G) that defines the B.1 lineage and second, a double substitution in the nucleocapsid protein (R203K, G204R) that defines the B.1.1 lineage, which has subsequently given rise to three Variants of Concern: Alpha, Gamma and Omicron. While the latter mutations appear unremarkable at the protein level, there are dramatic implications at the nucleotide level: the GGG{\textrightarrow}AAC substitution generates a new Transcription Regulatory Sequence (TRS) motif, driving SARS-CoV-2 to express a novel subgenomic mRNA (sgmRNA) encoding a truncated C-terminal portion of nucleocapsid (N.iORF3), which is an inhibitor of type I interferon production. We find that N.iORF3 also emerged independently within the Iota variant, and further show that additional TRS motifs have convergently evolved to express novel sgmRNAs; notably upstream of Spike within the nsp16 coding region of ORF1b, which is expressed during human infection. Our findings demonstrate that SARS-CoV-2 is undergoing evolutionary changes at the functional RNA level in addition to the amino acid level, reminiscent of eukaryotic evolution. Greater attention to this aspect in the assessment of emerging strains of SARS-CoV-2 is warranted.Competing Interest StatementThe authors declare no competing interests directly related to this work. CSw reports interests unrelated to this work: grants from BMS, Ono-Pharmaceuticals, Boehringer-Ingelheim, Roche-Ventana, Pfizer and Archer Dx, unrelated to this Correspondence; personal fees from Genentech, Sarah Canon Research Institute, Medicxi, Bicycle Therapeutics, GRAIL, Amgen, AstraZeneca, BMS, Illumina, GlaxoSmithKline, MSD, and Roche-Ventana, unrelated to this Correspondence; and stock options from Apogen Biotech, Epic Biosciences, GRAIL, and Achilles Therapeutics, unrelated to this Correspondence. DLVB reports grants from AstraZeneca unrelated to this work. All other authors declare no competing interests.  },
+	URL = {https://www.biorxiv.org/content/early/2022/04/20/2022.04.20.488895},
+	eprint = {https://www.biorxiv.org/content/early/2022/04/20/2022.04.20.488895.full.pdf},
+	journal = {bioRxiv}
+}
+
+@article {DeMaio2022,
+	author = {De Maio, Nicola and Kalaghatgi, Prabhav and Turakhia, Yatish and Corbett-Detig, Russell and Minh, Bui Quang and Goldman, Nick},
+	title = {Maximum likelihood pandemic-scale phylogenetics},
+	elocation-id = {2022.03.22.485312},
+	year = {2022},
+	doi = {10.1101/2022.03.22.485312},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Phylogenetics plays a crucial role in the interpretation of genomic data1. Phylogenetic analyses of SARS-CoV-2 genomes have allowed the detailed study of the virus{\textquoteright}s origins2, of its international3,4 and local4{\textendash}9 spread, and of the emergence10 and reproductive success11 of new variants, among many applications. These analyses have been enabled by the unparalleled volumes of genome sequence data generated and employed to study and help contain the pandemic12. However, preferred model-based phylogenetic approaches including maximum likelihood and Bayesian methods, mostly based on Felsenstein{\textquoteright}s {\textquoteleft}pruning{\textquoteright} algorithm13,14, cannot scale to the size of the datasets from the current pandemic4,15, hampering our understanding of the virus{\textquoteright}s evolution and transmission16. We present new approaches, based on reworking Felsenstein{\textquoteright}s algorithm, for likelihood-based phylogenetic analysis of epidemiological genomic datasets at unprecedented scales. We exploit near-certainty regarding ancestral genomes, and the similarities between closely related and densely sampled genomes, to greatly reduce computational demands for memory and time. Combined with new methods for searching amongst candidate evolutionary trees, this results in our MAPLE ({\textquoteleft}MAximum Parsimonious Likelihood Estimation{\textquoteright}) software giving better results than popular approaches such as FastTree 217, IQ-TREE 218, RAxML-NG19 and UShER15. Our approach therefore allows complex and accurate proba-bilistic phylogenetic analyses of millions of microbial genomes, extending the reach of genomic epidemiology. Future epidemiological datasets are likely to be even larger than those currently associated with COVID-19, and other disciplines such as metagenomics and biodiversity science are also generating huge numbers of genome sequences20{\textendash}22. Our methods will permit continued use of preferred likelihood-based phylogenetic analyses.Competing Interest StatementThe authors have declared no competing interest.},
+	URL = {https://www.biorxiv.org/content/early/2022/07/18/2022.03.22.485312},
+	eprint = {https://www.biorxiv.org/content/early/2022/07/18/2022.03.22.485312.full.pdf},
+	journal = {bioRxiv}
+}
