--- a/01_Article_MainText.tex
+++ b/01_Article_MainText.tex
@@ -1,6 +1,6 @@
 \leadauthor{Sanderson}
 
-\title{Taxonium: a web-based tool for exploring large phylogenetic trees}
+\title{Exploration of million-sequence viral phylogenies \\with Taxonium}
 \shorttitle{Taxonium}
 
 \author[1]{Theo Sanderson \orcidlink{0000-0003-4177-2851}}
@@ -11,14 +11,11 @@
 \maketitle
 
 \begin{abstract}
-The COVID-19 pandemic has resulted in a step change in the scale of sequencing data, with more genomes of SARS-CoV-2 having been sequenced than any other organism on earth. Previous web-based tools for phylogenetic exploration were not able to directly scale to this size of tree. We have developed Taxonium, a new tool that uses WebGL to allow the exploration of trees with tens of millions of nodes. Taxonium allows visualisation of mutation-annotated trees, where the genotypes at each internal node are indicated, and also links each node to associated metadata. An optional server-side backend permits rapid loading for widely used datasets, while a client-only mode allows the exploration of niche or sensitive data. Taxonium is an open-source tool which can be applied to any large tree. We provide an application for exploring a public tree of more than five million SARS-CoV-2 sequences at \href{http://cov2tree.org}{cov2tree.org}, the broader Taxonium tool at \href{http://taxonium.org}{taxonium.org}, and source code at \href{https://github.com/theosanderson/taxonium}{github.com/theosanderson/taxonium}.
+The COVID-19 pandemic has resulted in a step change in the scale of sequencing data, with more genomes of SARS-CoV-2 having been sequenced than any other organism on earth. These sequences reveal key insights when represented as a phylogenetic tree, which captures the evolutionary history of the virus, and allows the identification of transmission events and the emergence of new variants. However, existing web-based tools for analysing and exploring phylogenies do not scale to the size of datasets now available for SARS-CoV-2. We have developed Taxonium, a new tool that uses WebGL to allow the exploration of trees with tens of millions of nodes in the browser for the first time. Taxonium links each node to associated metadata and supports mutation-annotated trees, which are able to capture all known genetic variation in a dataset. We describe insights that analysing a tree of five million sequences can provide into SARS-CoV-2 evolution, and provide an application at \href{http://cov2tree.org}{cov2tree.org} for exploring a public tree of more than five million SARS-CoV-2 sequences. Taxonium can be applied to any tree, and is available at \href{http://taxonium.org}{taxonium.org}, with source code at \href{https://github.com/theosanderson/taxonium}{github.com/theosanderson/taxonium}.
 
 
 \end{abstract}
 
-\begin{keywords}
-tree | visualisation | phylogenetics
-\end{keywords}
 
 \begin{corrauthor}
 theo.sanderson\at crick.ac.uk
@@ -28,27 +25,40 @@ theo.sanderson\at crick.ac.uk
 
 Genomic researchers responded to the emergence of SARS-CoV-2 with rapid collaboration at unprecedented scale. Open protocols were quickly generated for amplicon sequencing \citep{Tyson2020}, and allowed researchers across the globe to produce ever-growing genomic datasets stored both in the INSDC databases \citep{insdc}, and in GISAID \citep{shu2017gisaid}, with the latter recently surpassing 11 million sequences. Importantly, new tools were also developed to understand the functional diversity of these samples, by assigning them into lineages proposed by the community \citep{rambaut2020dynamic, o2021assignment}, and allowing interactive exploration of trends in these data over time \citep{hodcroft_2021, chen2022cov, outbreakinfo}.
 
-The vast scale of these datasets has posed challenges for the array of tools that researchers had previously relied upon to manipulate, analyse, and visualise genomic data. In particular, the construction of phylogenetic trees, and the visualisation of these trees, has been a bottleneck in the analysis of SARS-CoV-2 genomic data. There are two broad responses possible to this issue. One is to downsample the sequences analysed in order to create a smaller dataset with which existing tools are able to work efficiently. This has been an important approach, and has allowed NextStrain \citep{nextstrain} to provide one of the most widely-used and important tools for exploring SARS-CoV-2 genetic diversity. Briefly, the NextStrain pipeline downsamples sequences in a rational way, and then uses iqtree \citep{iqtree} to assemble them into a tree, assigns chronology and ancestral states to this tree using TreeTime \citep{treetime}, and displays the results in a user-friendly interactive interface using Auspice \citep{nextstrain}. All three of these post-downsampling stages are bottlenecks which prevent the use of full datasets, and so NextStrain analyses are typically limited to \textasciitilde4,000 nodes -- sampled in a structured way to ensure they either provide an overview of the pandemic or hone in on particular sequences of interest.
 
 \begin{figure}
 
 \begin{center}
 \includegraphics[width=\linewidth]{Figures/cov2tree.png}
 \end{center}
-\caption{The Taxonium web client displaying a 5,151,952 sequence tree of SARS-CoV-2 sequences. The left hand panel shows the zoomable tree with a minimap for orientation, and the right hand panel provides options for searching for nodes and for changing the colour scheme. Hovering over a node shows information in a tooltip, while clicking on a node displays further information in the right-hand panel. A search has been carried out for mutations at S:501 to Y, filtered to such nodes with 5,000 descendants, which are circled in red. Genomes are coloured by their PANGO lineage.}
+\caption{\textbf{Tree exploration at unprecendented scale.} This figure presents a screenshot of the Taxonium web client displaying a 5,151,952 sequence tree of SARS-CoV-2 sequences. The left hand panel shows the zoomable tree with a minimap for orientation, and the right hand panel provides options for searching for nodes and for changing the colour scheme. Hovering over a node shows information in a tooltip, while clicking on a node displays further information in the right-hand panel. A search has been carried out for mutations at S:501 to Y, filtered to such nodes with at least 5,000 descendants, which are circled in red. Genomes are coloured by their PANGO lineage.}
 \label{fig:taxonium_client}
 \end{figure}
 
-The new scale of data available provides an impetus to develop new tools that are able to work with these large datasets without downsampling. Recently the development of UShER \citep{usher} has permitted larger trees to be built than ever previously. UShER takes a starting tree, built with iqtree or a similar approach, and incrementally adds sequences by maximum parsimony. For densely sampled sequencing efforts, as in the SARS-CoV-2 pandemic, such an approach still yields tree topologies of very high quality \citep{Thornlow2021.12.02.471004}. To turn this distance tree into a time tree, by estimating a time associated with each node in the tree, we recently developed Chronumental \citep{chronumental} which uses stochastic gradient descent to efficiently construct chronologies from very large trees, which was not possible with previous approaches. A final necessary component is a tool for exploring these large trees, ideally in a browser.
+The fundamental representation of an epidemic for genomic epidemiology is a phylogenetic tree, which for RNA viruses closely approximates the transmission tree of the viral epidemic and allows the direction of migration of viral lineages to be understood \citep{pmid27501264}. When trees are annotated with the mutations that have occurred at each internal node, they capture information about parallel and convergent evolution, which can identify recurrent mutations of concern.
 
-Here we describe Taxonium, a web-based tool for for examining large trees. Taxonium scales to trees with millions of nodes, and allows for rapid panning and zooming using WebGL. In addition to reading Newick format trees, Taxonium can also display UShER mutation-annotated trees which capture genotype information in mutations at internal nodes. It permits searching for nodes by metadata or genotype, and a range of colouring options. Taxonium is available in a server-backed mode, which in a matter of seconds loads to allow exploration of all publicly available SARS-CoV-2 sequences, and also a fully client-side mode suitable for exploring custom datasets, including those with sensitive data.
+The unparalleled size of SARS-CoV-2 datasets has posed challenges for the array of tools that researchers have previously relied upon to manipulate, analyse, and visualise genomic data. In particular, the construction of phylogenetic trees, and the visualisation of these trees, have been major bottlenecks preventing full-scale analyses. There are two broad responses possible to this issue. One is to downsample the sequences analysed in order to create a smaller dataset with which existing tools are able to work efficiently. This has been an important approach, and has allowed NextStrain \citep{nextstrain} to provide one of the most widely-used and important tools for exploring SARS-CoV-2 genetic diversity. Briefly, the NextStrain pipeline downsamples sequences in a rational way, and then uses iqtree \citep{iqtree} to assemble them into a tree, assigns chronology and ancestral states to this tree using TreeTime \citep{treetime}, and displays the results in a user-friendly interactive interface using Auspice \citep{nextstrain}. All three of these post-downsampling stages are bottlenecks which prevent the use of full datasets, and so NextStrain analyses are typically limited to \textasciitilde4,000 nodes -- sampled in a structured way to ensure they either provide an overview of the pandemic or hone in on particular sequences of interest.
 
 
-\section*{Methods}\label{s:results}
+The new scale of data available provides an impetus to develop new tools that are able to operate on these large datasets directly without downsampling. Recently the development of UShER \citep{usher} has permitted larger trees to be built than ever previously. UShER takes a starting tree, built with iqtree or a similar approach, and incrementally adds sequences by maximum parsimony. For densely sampled sequencing efforts, as in the SARS-CoV-2 pandemic, such an approach still yields tree topologies of very high quality \citep{Thornlow2021.12.02.471004}. To turn this distance tree into a time tree, by estimating a time associated with each node in the tree, we recently developed Chronumental \citep{chronumental} which uses stochastic gradient descent to efficiently construct chronologies from very large trees, which was not possible with previous approaches. A final necessary component is a tool for exploring these large trees, ideally in a browser.
 
-\subsection*{The Taxonium Web Client}
+Here we describe Taxonium, a web-based tool for for analysing and exploring large trees. Taxonium scales to trees with millions of nodes, and allows for rapid panning and zooming using WebGL. In addition to reading Newick format trees, Taxonium can also display UShER mutation-annotated trees which capture genotype information in mutations at internal nodes. It permits searching for nodes by metadata or genotype, and a range of annotation options. Taxonium is available in a server-backed mode, which in a matter of seconds loads to allow exploration of all publicly available SARS-CoV-2 sequences, and also a fully client-side mode suitable for exploring custom datasets, including those with sensitive data.
 
-The Taxonium web client is a React application for exploring trees. One major bottleneck of previous approaches was the use of web technologies involving SVG or Canvas to visualize the tree, which have performance limitations. We instead use WebGL, as implemented via DeckGL \citep{deckgl}, for efficient visualisation of the tree. Even so, rendering every node in the tree would still be too slow, and would involve hundreds of nodes overplotted on each pixel when a tree was zoomed out. We address this by rendering a sparsified version of the tree, with the sparsification dependent on the zoom level such that only nodes that would be hidden by other nodes are excluded. This approach allows for fast and responsive tree exploration.
+
+\section*{Results}\label{s:results}
+
+\begin{figure}
+
+\begin{center}
+\includegraphics[width=\linewidth]{Figures/TaxoniumFlowChart.pdf}
+\end{center}
+\caption{\textbf{Components of the Taxonium project.} At the core of Taxonium is a graphical interface that runs in the web browser. It can connect either to a web-worker running in the same browser (for purely local use) or to an API web-server that serves parts of the tree on demand. Trees can be loaded from Newick format files with metadata TSVs, or from a specialised Taxonium JSONL format which is able to capture mutation-annotated trees. Taxonium JSONLs can be produced using the Taxoniumtools library.}
+\label{fig:flowchart}
+\end{figure}
+
+\subsection*{The Taxonium web client allows exploration of million-node phylogenies in the browser}
+
+To address the need for analysis of very large phylogenies, we built the Taxonium web client, a React application available at \href{http://taxonium.org}{taxonium.org}. One major bottleneck for previous approaches was the use of web technologies involving SVG or Canvas to visualize the tree, which have performance limitations. We instead use WebGL, as implemented via DeckGL \citep{deckgl}, for efficient visualisation of the tree. Even so, rendering every node in the tree would still be too slow, and would involve hundreds of nodes overplotted on each pixel when a tree was zoomed out. We address this by rendering a sparsified version of the tree, with the sparsification dependent on the zoom level such that only nodes that would be hidden by other nodes are excluded. This approach allows for fast and responsive tree exploration.
 
 The input to Taxonium is a tree (e.g. in Newick format) and, optionally, metadata. Metadata is associated with each node of the tree, and the tree can be coloured by any chosen metadata item. Colours are by default selected using an algorithm that hashes the metadata's string value into a unique colour, ensuring consistency over time without the need for comprehensive look-up tables. In addition, the tree can be searched based on the metadata, with identified nodes circled. Complex hierarchical boolean combination queries using AND, OR, or NOT  are supported.
 
@@ -56,7 +66,7 @@ The input to Taxonium is a tree (e.g. in Newick format) and, optionally, metadat
 \begin{center}
 \includegraphics[width=0.9\linewidth]{Figures/681.pdf}
 \end{center}
-\caption{Overlaying genotype data at position Spike 681 on 4,616,067 SARS-CoV-2 genomes with Taxonium. Taxonium's `Colour by genotype' feature was used to generate this screenshot. Labels were added afterwards.}
+\caption{\textbf{Mutation-annotated trees capture full sequence variation}. In this screenshot, genotype data at position Spike 681  is overlaid onto the full SARS-CoV-2 tree with Taxonium. This analysis can be reproduced by setting the ``Color by'' field to \textit{genotype}.}
 \label{fig:681}
 \end{figure}
 
@@ -64,7 +74,7 @@ The user interface of the Taxonium web client is shown in \cref{fig:taxonium_cli
 
 
 
-In addition to accepting traditional trees, Taxonium also supports mutation annotated trees (MATs, \citet{matutils}), of the type generated by UShER, where internal nodes are annotated with mutations inferred to have occurred at that point in the phylogeny. Since an MAT essentially captures the full sequence of each sample in the tree, its use as an input permits the user to colour the tree by genotype at any desired site (\cref{fig:681}), or alternatively to search for particular mutations in internal modes (\cref{fig:452}), and to filter by how many leaf nodes these mutations gave rise to.
+In addition to accepting traditional trees, Taxonium also supports mutation annotated trees (MATs, \citet{matutils}), generated by UShER, where internal nodes are annotated with mutations inferred to have occurred at that point in the phylogeny (\cref{fig:flowchart}). Since an MAT essentially captures the full sequence of each sample in the tree, its use as an input permits the user to colour the tree by genotype at any desired site (\cref{fig:681}), or alternatively to search for particular mutations in internal modes (\cref{fig:452}), and to filter by how many leaf nodes these mutations gave rise to.
 
 
 
@@ -72,21 +82,21 @@ In addition to accepting traditional trees, Taxonium also supports mutation anno
 \begin{center}
 \includegraphics[width=\linewidth]{Figures/452_2.png}
 \end{center}
-\caption{Looking for recurrent mutations in SARS-CoV-2 with Taxonium. Here we have zoomed in on Omicron (B.1.1.529), with 1,422,024 sequences until late May 2022, and are circling nodes featuring a mutation at S:452 to either M or Q which have more than 10 descendants. These appear to be much more common on the BA.2 genetic background.}
+\caption{\textbf{Taxonium reveals recurrent mutations in SARS-CoV-2.} This figure shows a tree zoomed in on Omicron (B.1.1.529), with 1,422,024 sequences until late May 2022. Circled nodes feature a mutation at S:452 to either M or Q which have more than 10 descendants. These (independent) mutation are much more common on the BA.2 genetic background, revealing epistasis.}
 \label{fig:452}
 \end{figure}
 
-Taxonium can allow visualisation of trees entirely in the client, which is especially important for trees which may contain sensitive patient-level data. Trees are loaded either from a Newick file and TSV metadata file, or from a custom preprocessed Taxonium JSONL format combining the two. The Taxonium JSONL format contains a pre-computed layout for the tree, reducing the amount of computation required for its display, but Newick files can also be laid out in the client, which is achieved using an approach heavily based on JStree \citep{jstree}. More expensive computational operations, such as the sparsification of the tree for display, are performed in a web worker in order to maintain a responsive interface.
+Taxonium can allow visualisation of trees entirely in the client (\cref{fig:flowchart}, l.h.s.), which is especially important for trees which may contain sensitive patient-level data. Trees are loaded either from a Newick file and TSV metadata file, or from a custom preprocessed Taxonium JSONL format combining the two. The Taxonium JSONL format contains a pre-computed layout for the tree, reducing the amount of computation required for its display, but Newick files can also be laid out in the client, which is achieved using an approach heavily based on JStree \citep{jstree}. More expensive computational operations, such as the sparsification of the tree for display, are performed in a web worker in order to maintain a responsive interface.
 
-\subsection*{The Taxonium Backend}
+\subsection*{An optional server-based implementation empowers rapid analysis}
 
-The client-side only version of Taxonium is highly responsive, and permits loading trees with millions of nodes on typical consumer computers. However, the process of deserialising tree data from disk into Javascript objects in memory is a bottleneck, requiring one minute and 20 seconds for a tree of 5.4 million sequences. Large trees also demand increasing amounts of RAM and download bandwidth which might rule out the use of lower spec devices. To allow near instantaneous access to trees with millions of nodes on almost any internet-connected device, we built a server-backed mode for Taxonium, in which a server reads trees from disk in advance and then serves required parts of them to each client on demand. The server-backed mode is more efficient, as it does not require all data to be sent to the client, and the computationally expensive operations can be performed on a more powerful machine. Using this mode, a 5.4 million sequence tree can initially load in seconds. We continue to offer the client-side mode, which has the advantage that it can be used with custom data, and especially for data that may be sensitive and not suitable for uploading.
+The client-side only version of Taxonium is highly responsive, and permits loading trees with millions of nodes on typical consumer computers. However, the process of deserialising tree data from disk into Javascript objects in memory is a bottleneck, requiring one minute and 20 seconds for a tree of 5.4 million sequences. Large trees also demand increasing amounts of RAM and download bandwidth which might rule out the use of lower spec devices. To allow near instantaneous access to trees with millions of nodes on almost any internet-connected device, we built a server-backed mode for Taxonium, in which a server reads trees from disk in advance and then serves required parts of them to each client on demand (\cref{fig:flowchart}, r.h.s.). The server-backed mode is more efficient, as it does not require all data to be sent to the client, and the computationally expensive operations can be performed on a more powerful machine. Using this mode, a 5.4 million sequence tree can initially load in seconds. We continue to offer the client-side mode, which has the advantage that it can be used with custom data, and especially for data that may be sensitive and not suitable for uploading.
 
 
 
 The Taxonium backend is implemented in NodeJS using Express. It runs from the same codebase that runs in the web worker in the browser. We made substantial efforts to make this backend code as efficient as possible. Nodes are stored sorted by their y coordinates, meaning that two binary searches can be used to identify the slice of nodes that lie within a supplied window.
 
-\subsection*{Taxoniumtools}
+\subsection*{User-friendly tooling for tree generation}
 
 We provide a simple Python application, \texttt{taxoniumtools}, which allows straightforward generation of a Taxonium JSONL file from an UShER MAT. The Taxonium JSONL format combines tree topology, node metadata, and mutations, in a row-wise format. The tree's structure is encoded only in the \texttt{parent\_id} property of each node.
 
@@ -94,23 +104,23 @@ Taxoniumtools uses TreeSwift \citep{moshiri2020treeswift} for rapid loading of t
 
 Full documentation for Taxonium and Taxoniumtools is available at \href{http://docs.taxonium.org}{docs.taxonium.org}.
 
-\section*{Implementations}
+\subsection*{A resource for the phylogenetic analysis of all public SARS-CoV-2 genomes}
 
-We have implemented Taxonium in a several applications, which provide examples of some of the ways it can be useful.
+We used Taxonium to build the Cov2Tree web application (\href{http://cov2tree.org}{cov2tree.org}), which allows users to explore the full global diversity of public SARS-CoV-2 sequences (Figure 3). 
 
-\subsection*{Cov2Tree}
+Cov2Tree is based on the daily-updated UShER tree built by \cite{McBroome2021}, which currently contains 5.6 million sequences. We provide a time tree inferred by Chronumental, and also provide a daily-updated file containing the date placements inferred by Chronumental\footnote{\url{https://cov2tree.nyc3.cdn.digitaloceanspaces.com/chron_dates.tsv.gz}} which can allow the identification of sequences with metadata errors \citep{chronumental}.
 
-We used Taxonium to build the Cov2Tree web application (\href{http://cov2tree.org}{cov2tree.org}), which allows users to explore the global diversity of SARS-CoV-2 (Figure 2). 
+We run a backend server that supports the Cov2Tree application, meaning that the user needs only to load the data for the region of the tree on which they have zoomed in. This helps to enable analysis in lower bandwidth settings. Users can colour the tree by PANGO lineage, by sample country, or by genotype, and use searches to conduct complex queries.
 
-Cov2Tree uses the UShER tree built by \cite{McBroome2021}, which currently contains 5.4 million sequences. We provide a time tree inferred by Chronumental, and also provide a daily-updated file containing the date placements inferred by Chronumental\footnote{\url{https://cov2tree.nyc3.cdn.digitaloceanspaces.com/chron_dates.tsv.gz}} which can allow the identification of sequences with metadata errors \citep{chronumental}.
+The application of Taxonium to global SARS-CoV-2 datasets provides important insights into the evolution of the virus. Taxonium is the only tool that readily displays the number of independent times a given mutation has occurred during viral evolution, and the lineages in which these mutations evolved. This can be a key analytical approach to understand evolutionary processes such as epistasis. For example, Taxonium reveals a very heavy enrichment for occurrences of S:452M/S:452Q are within the BA.2 lineage (Figure 3), providing evidence of epistatic interactions between this position and BA.2 defining mutations. Similar effects are seen at S:212 \footnote{See \href{https://cov2tree.org/?srch=\%5B\%7B\%22key\%22\%3A\%22aa1\%22\%2C\%22type\%22\%3A\%22mutation\%22\%2C\%22method\%22\%3A\%22mutation\%22\%2C\%22text\%22\%3A\%22\%22\%2C\%22gene\%22\%3A\%22S\%22\%2C\%22position\%22\%3A\%22212\%22\%2C\%22new_residue\%22\%3A\%22any\%22\%2C\%22min_tips\%22\%3A\%2210\%22\%7D\%5D&color=\%7B\%22field\%22\%3A\%22None\%22\%7D}{this tree}}.
 
-We run a backend server that supports the Cov2Tree application, meaning that the user needs only to download the data for the region of the tree on which they have zoomed in. This helps to enable analysis in lower bandwidth settings. Users can colour the tree by PANGO lineage, by sample country, or by genotype, and use searches to conduct complex queries.
+Taxonium has also been used  to probe  regional introduction events and transmission clusters during the SARS-CoV-2 pandemic \citep{mcbroome2022identifying}, to identify a convergent origin for two sets of mutations which each create a new ORF \citep{Mears2022}, and to examine new tools for pandemic-scale tree reconstruction \citep{DeMaio2022}.
 
-In the case of the SARS-CoV-2 dataset, the server backend requires around 5 GB of RAM per server instance.
 
-\subsection*{Other projects}
 
-We decided to use Taxonium to create a tool that allows exploration of the NCBI Taxonomy database \citep{federhen2012ncbi}. The resulting visualisation, which can be found at \href{http://taxonomy.taxonium.org}{taxonomy.taxonium.org}, allows interactive viewing of the taxonomic relationships between 2.2 million species, as well as searches.
+\subsection*{Taxonium has applications beyond SARS-CoV-2.}
+
+We have used Taxonium to create a tool that allows exploration of the NCBI Taxonomy database \citep{federhen2012ncbi}. The resulting visualisation, which can be found at \href{http://taxonomy.taxonium.org}{taxonomy.taxonium.org}, allows interactive viewing of the taxonomic relationships between 2.2 million species, as well as searches.
 
 
 We have also collaborated with the Serratus project \citep{edgar2022petabase} to allow visualisation of trees of virus sequences identified in a search of petabases of sequence from the Sequence Read Archive. Each viral order and family at \href{http://serratus.io/trees}{serratus.io/trees} now provides an option to open a custom Taxonium tree.
@@ -121,31 +131,30 @@ With the arrival of the 2022 monkeypox outbreak in Europe, we launched \href{htt
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\linewidth]{Figures/taxonium (4).png}
+\includegraphics[width=\linewidth]{Figures/mpxtax.pdf}
 \end{center}
 \caption{
-A screenshot of the mpxTree application showing monkeypox phylogeny. 
+\textbf{Taxonium has applications beyond SARS-CoV-2}. A: Phylogeny of monkeypox sequences at mpx.taxonium.org. The large clade represents the current outbreak B: NCBI's taxonomy of 2.2M species as explorable at taxonomy.taxonium.org
 }
 \label{fig:cov2tree}
 \end{figure}
 
-\section*{Comparison to other tools}
-
-\subsection*{Scale}
+\subsection*{Taxonium scales to larger trees than any existing tool}
 
 We argue that Taxonium is currently the tool that best scales to the largest trees. To examine this we here compare a number of tools for their ability to load a very large tree. We stress that many of these tools were likely not specifically designed to be able to load trees of this size, unlike Taxonium.
 
-We used the example of a Newick tree derived from a recent UShER public tree \citep{McBroome2021} featuring 5,326,538 sequences \footnote{\url{https://hgwdev.gi.ucsc.edu/~angie/UShER_SARS-CoV-2/2022/05/17/public-2022-05-17.all.nwk.gz}}. On a Macbook Pro (2018 version, 2.3 GHz quad-core i5), Taxonium loaded this tree from the Newick file in 31 seconds. We were able to open this file with Dendroscope -- for which we increased its allotted RAM to 5 GB. The tree loaded in 1 minute and 23 seconds, however it rendered initially as a single black rectangle which only began to resolve upon zooming in, making it difficult to extract insights about the tree. Dendroscope used all available RAM whereas Taxonium used 1.7 GB. In general, Taxonium felt substantially more responsive.
-
-We attempted to load the same file on Microreact.org \citep{argimon2016microreact} (which now uses Phylocanvas.GL), but the screen locked up and had not loaded within a reasonable time. A Phylocanvas.GL demo \footnote{\url{https://www.phylocanvas.gl/examples/very-large-tree.html}} does show that the library \citep{abudahab2021phylocanvas} is able to load a SARS-CoV-2 tree with >1M leaves, panning relatively slowly on our hardware.
+We used the example of a Newick tree derived from a recent UShER public tree \citep{McBroome2021} featuring 5,326,538 sequences \footnote{The tree can be downloaded \href{https://hgwdev.gi.ucsc.edu/~angie/UShER\_SARS-CoV-2/2022/05/17/public-2022-05-17.all.nwk.gz}{here}}. On a Macbook Pro (2018 version, 2.3 GHz quad-core i5), Taxonium loaded this tree from the Newick file in 31 seconds. 
 
 Archaeopteryx \citep{archaeopteryx} took >5 minutes to load this tree with stack size set to 5 GB, and then was essentially unresponsive. Empress 1.20 \citep{CantrellFedarko2021empress} did not load this tree in the browser in any reasonable length of time. We were unable to upload this file to iTOL \citep{itol} or the ETE Tree Explorer \citep{ete}.
 
-\subsection*{Features}
+We attempted to load the same file on Microreact.org \citep{argimon2016microreact} (which now uses Phylocanvas.GL), but the screen locked up and had not loaded within a reasonable time. A Phylocanvas.GL demo \footnote{\url{https://www.phylocanvas.gl/examples/very-large-tree.html}} does show that the library \citep{abudahab2021phylocanvas} is able to load a SARS-CoV-2 tree with >1M leaves, panning relatively slowly on our hardware.
 
-It must be noted that all these tools have different feature sets. Many of the tools above allow for features absent from Taxonium, such as re-rooting, displaying trees radially, collapsing subtrees, and more. Support for these features to an extent trades-off against scale. Conversely, Taxonium is unique among these tools in supporting mutation-annotated trees, and perhaps in its ability to toggle to a time tree -- features shared with, and inspired by, Auspice \citep{nextstrain}.
+We found it difficult to evaluate the performance of Dendroscope: we were able to open this file -- for which we increased its allotted RAM to 5 GB. The tree loaded in 1 minute and 23 seconds. However it rendered as a single black rectangle which only began to resolve upon zooming in substantially, making it difficult to extract insights about the tree. Dendroscope used all available RAM whereas Taxonium used 1.7 GB. In general, Taxonium felt substantially more responsive.
 
-An array of other tools for tree visualisation exist, with diverse feature sets. We have aimed to test here those most likely to scale to the largest trees available. As an aside, we believe that vertical zoom is an all-but-essential feature for any tree viewer to be useful in exploring the detail of large phylogenies, but absent from a surprising number of tools.
+
+It must be noted that all these tools have different feature sets. Many of the tools above allow for features absent from Taxonium, such as re-rooting, displaying trees radially, collapsing subtrees, and more. Support for these features to an extent trades-off against scale. Conversely, Taxonium is unique among these tools in supporting mutation-annotated trees, and perhaps in its ability to toggle to a time tree -- features shared with, and inspired by, Auspice \citep{nextstrain} -- which is limited to phylogenies of <\textasciitilde10,000 nodes (around 0.2\% of  Taxonium scale). In sum, we argue that Taxonium is the only tool able to fluidly explore the largest trees in current use on consumer-grade hardware.
+
+
 
 \section*{Discussion}\label{s:discussion}
 
@@ -159,13 +168,51 @@ One challenge in this new era of vast datasets is the variable quality of sequen
 
 Taxonium is an ongoing open source project to create and maintain a tree viewer able to scale to the latest phylogenies. We welcome contributions from the community and hope that the features described here will be useful to those working on epidemiological surveillance and outbreak response.
 
+\clearpage{}
+\section*{Materials and methods}
+
+\subsection*{Data sources}
+In order to be able to share trees through a web application, we present data at Cov2Tree and in this paper derived from SARS-CoV-2 sequences made available openly in the INSDC databases. We are fortunate to be able to use a pre-computed UShER tree also made available openly on a daily basis \citep{McBroome2021}.
+
+\subsection*{The Taxonium web client}
+The Taxonium web client is implemented in React. All source code is available at \url{https://github.com/theosanderson/taxonium/tree/master/taxonium_web_client}. The core of the visualisation runs in DeckGL, which is heavily modified to allow independent zooming in X and Y. The data consumed by DeckGL is generated either in a web worker (local mode) or in from an external API running the Taxonium backend (remote mode).
+
+In either case, the key endpoint provides a sparsified tree, computed by cutting the tree to a region just larger than the bounding box of the user's current page, then filtering out nodes that overlie one another, and then adding all ancestral nodes of those selected to ensure that the tree returned is a pruned version of the full tree. Outputting a full pruned tree means that the genotypes of all terminal nodes can be computed by traversing the mutations associated with each node.
+
+The returned dataset includes all metadata for each included node, meaning that users can select any item to colour nodes by, or alternatively can colour nodes by genotype.
+
+Alternatively the \emph{Search} endpoint allows users to search across the whole dataset, with nodes matching the search circled in the interface. The same filtering strategy is applied to the results of search, meaning that even searches that return millions of results can be interacted with fluidly.
+
+Taxonium is capable of storing two different distant metrics in the same tree, allowing users to switch between the genetic distance and the temporal phylogeny. 
+
+
+\subsection*{Taxonium backend}
+The Taxonium backend is implemented in NodeJS in an Express-based framework. Full source code is available at \url{https://github.com/theosanderson/taxonium/tree/master/taxonium_backend}. The core code for filtering and searching that runs in the web-worker for the front-end is reused through a shared package, \emph{taxonium\_data\_handling}.
+
+The backend keeps the full tree in memory, then serves filtered slices of it to users on demand. In the case of the SARS-CoV-2 dataset, the server backend requires around 5 GB of RAM per server instance. We run Cov2Tree on an autoscaling Kubernetes cluster.
+
+\subsection*{Taxoniumtools and tree processing}
+The \emph{taxoniumtools} package is written in Python and distributed with PyPI. Tree manipulation is performed with TreeSwift \citep{moshiri2020treeswift}. The package includes the ability to number internal nodes, with a numbering scheme that matches UShER newick exports. An optional feature, used for display on Cov2Tree, "shears" off outlier nodes with very few descendants, which often represent sequencing errors or occasionally recombinants. This pruning can help to make large trees more interpretable.
+
 
 \small
+
+\subsection*{Data availability statement}
+
+The input mutation-annotated trees from publicly available SARS-CoV-2 genomes are described in \cite{McBroome2021} and made available at \url{http://hgdownload.soe.ucsc.edu/goldenPath/wuhCor1/UShER_SARS-CoV-2/}.
+
+The code for Taxonium is available at \url{https://github.com/theosanderson/taxonium}.
+
+
 \subsection*{Acknowledgements}
 
 Phylogenetic analysis of viral genomes is only possible thanks to a community of researchers and clinicians who take viral samples, generate genomes, and submit to sequence databases such as the INSDC databases and GISAID, and I am very grateful to all contributors. I am indebted to Richard Goater for development advice and to Angie Hinrichs for maintenance of the underlying tree that powers Cov2Tree. This preprint uses a \href{https://github.com/roylelab/manuscript-templates}{LaTeX template} from the Royle Lab, which in turn was forked from a template by Ricardo Henriques.
 
-This work was supported by the Wellcome Trust (210918/Z/18/Z) and the Francis Crick Institute which receives its core funding from Cancer Research UK (FC011104, FC011233), the UK Medical Research Council (FC011104, FC011233), and the Wellcome Trust (FC011104, FC011233).
+This work was supported by the Wellcome Trust (210918/Z/18/Z) and the Francis Crick Institute which receives its core funding from Cancer Research UK (FC001043), the UK Medical Research (FC001043) Council, and the Wellcome Trust (FC001043).
+
+
+\subsection*{Conflicts of interests}
+The authors declare that they have no conflicts of interest.
 
 
 
